tests/ui/eii/wrong_ret_ty.rs
//@ compile-flags: --crate-type rlib
#![feature(eii)]
#![feature(decl_macro)]
#![feature(rustc_attrs)]
#![feature(eii_internals)]

#[eii_macro_for(bar)]
#[rustc_builtin_macro(eii_macro)]
macro foo() {

}

unsafe extern "Rust" {
    safe fn bar(x: u64) -> u64;
}

#[foo]
fn other(_x: u64) {
//~^ ERROR function `other` has a type that is incompatible with the declaration

}

fn main() {
    bar(0);
}
